<resources>
    <string name="app_name">Delivery Bondhu</string>

    <string name="app_name_folder">DeliveryBondhu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cd">image</string>
    <string name="subTitle">Essentials</string>
    <string name="login">লগইন</string>
    <string name="login_action">লগইন করুন</string>
    <string name="see_more">বিস্তারিত দেখুন ⪼</string>
    <string name="registration_action">রেজিস্ট্রেশন</string>
    <string name="forget_password">পাসওয়ার্ড ভুলে গেছেন?</string>
    <string name="registration">একাউন্ট খুলুন</string>
    <string name="password">পাসওয়ার্ড *</string>
    <string name="confirm_password">পুনরায় পাসওয়ার্ড লিখুন</string>
    <string name="mobile_number">মোবাইল নম্বর *</string>
    <string name="bKash_account">বিকাশ একাউন্ট নম্বর *</string>
    <string name="alter_mobile_number">বিকল্প মোবাইল নম্বর</string>
    <string name="order_list">অর্ডার লিস্ট</string>
    <string name="search_hint">অর্ডার কোড/নাম</string>
    <string name="search_hint1">পিওডি, ফোন নাম্বার</string>
    <string name="filter_name_accepted">শুধু অ্যাকসেপ্টেড</string>
    <string name="development">Under Development</string>
    <string name="name">নাম *</string>
    <string name="current_working">বর্তমান কর্মস্থান *</string>
    <string name="current_working_thana">এরিয়া *</string>

    <string name="default_notification_channel_id">Promotion</string>
    <string name="notification_channel_chat">Chat</string>
    <string name="notification_channel_chat_name">Chat</string>

    <string name="ping_connect">দুঃখিত, এই মুহূর্তে আপনার ইন্টারনেট কানেকশনে সমস্যা হচ্ছে</string>
    <string name="api_connect_error">দুঃখিত, এই মুহূর্তে আমাদের সার্ভার কানেকশনে সমস্যা হচ্ছে"\n"কিছুক্ষণ পর আবার চেষ্টা করুন</string>
    <string name="error_msg">দুঃখিত,কিছুক্ষণ পর আবার চেষ্টা করুন</string>
    <string name="wait">অপেক্ষা করুন</string>

    <string name="action_accept">অ্যাকসেপ্ট</string>
    <string name="action_can_not_collect">কালেক্ট করা সম্ভব নয়</string>
    <string name="action_collected">বাজার থেকে কালেক্ট করা হয়েছে</string>
    <string name="action_delivered">অর্ডার ডেলিভারি করা হয়েছে</string>
    <string name="action_canceled">কাস্টমার ডেলিভারি নিতে আগ্রহী নয়</string>
    <string name="button_product_delivery">প্রোডাক্ট ডেলিভারি</string>
    <string name="button_parcel_delivery">পার্সেল ডেলিভারি</string>
    <string name="already_account">আপনার একাউন্ট আছে?</string>

    <string-array name="filter">
        <item>সকল</item>
    </string-array>

    <string-array name="spinner_array_collection_location">
        <item>Select Item</item>
    </string-array>

    <!-- printer -->
    <string name="toast_1">Transaction print,use the AIDL mode!</string>
    <string name="toast_2">No printing service found</string>
    <string name="toast_3">Bluetooth device is unavailable</string>
    <string name="toast_4">Bluetooth device not detected. Please open Bluetooth!</string>
    <string name="toast_5">Not Found Printer!</string>
    <string name="toast_6">Bluetooth connect failed!</string>
    <string name="toast_7"> Only a single Qr code is printed for the AIDL mode</string>
    <string name="toast_8">Now QrCode size must be less than 7!</string>
    <string name="toast_9">BarCode type or content error!</string>

    <string name="instruction">নির্দেশনা</string>
    <string name="select_dist">জেলা নির্বাচন করুন</string>
    <string name="select_thana">থানা নির্বাচন করুন</string>
    <string name="select_aria">এরিয়া/পোস্ট অফিস সিলেক্ট করুন</string>
    <string name="no_aria">এরিয়া/পোস্ট অফিস নেই</string>
    <string name="orderType1">শুধু ডেলিভারি (প্রি-পেইড)</string>
    <string name="orderType2">ডেলিভারি+টাকা কালেকশন (COD)</string>
    <string name="why_location_required">To get new order based on your current location automatically, allow Delivery Bondhu to use your location all of the time.</string>
    <string name="how_location_used">Delivery Bondhu will use location in the background to show order based on location and overall operation progress.</string>

</resources>
