<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.LoginFragment">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.ajkerdeal.app.essential.ui.auth.AuthViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="10dp"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/bg_login_bar"
                android:contentDescription="@string/cd"
                />

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:textColor="@color/black_70"
                android:text="@string/login"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="50dp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userIdLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="30dp"
                android:hint="@string/mobile_number"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:textColor="@color/black_70"
                    android:textSize="14sp"
                    tools:text=""
                    android:maxLength="11"
                    android:text="@={viewModel.userId}"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/userIdLayout"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textColor="@color/black_70"
                    android:textSize="14sp"
                    android:maxLength="24"
                    tools:text=""
                    android:text="@={viewModel.password}"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginBtn"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/login_action"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:backgroundTint="@color/colorAccent"
                app:cornerRadius="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/passwordLayout"
                android:onClick="@{viewModel::onLoginClicked}"

                />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:indeterminate="true"
                android:indeterminateTint="@color/white"
                android:visibility="@{viewModel.progress ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="@id/loginBtn"
                app:layout_constraintEnd_toEndOf="@id/loginBtn"
                app:layout_constraintHorizontal_bias="0.30"
                app:layout_constraintStart_toStartOf="@id/loginBtn"
                app:layout_constraintTop_toTopOf="@id/loginBtn"
                tools:visibility="visible"
                android:elevation="8dp"

                />


            <TextView
                android:id="@+id/helpline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/black_60"
                android:text="@string/helpline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/helplineNumber"
                android:layout_marginBottom="2dp"
                />

            <TextView
                android:id="@+id/helplineNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black_70"
                android:text="@string/helpline_number"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="16dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>
